force-app/main/default/objects/PMNotificationSets__x/PMNotificationSets__x.object-meta.xml
<CustomObject>
    <description>PMNotificationSets</description>
    <externalDataSource>AusNet_OData</externalDataSource>
    <externalName>PMNotificationSets</externalName>
    <label>PMNotificationSets</label>
    <pluralLabel>PMNotificationSets</pluralLabel>
</CustomObject>