force-app/main/default/objects/PMNotificationSets__x/fields/Assembly__c.field-meta.xml
<CustomField>
    <fullName>Assembly__c</fullName>
    <description>Assembly</description>
    <externalDeveloperName>Assembly</externalDeveloperName>
    <label>Assembly</label>
    <length>128</length>
    <type>Text</type>
</CustomField>