force-app/main/default/objects/PMNotificationSets__x/fields/Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Breakdown__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Breakdown</description>
    <externalDeveloperName>Breakdown</externalDeveloperName>
    <label>Breakdown</label>
    <type>Checkbox</type>
</CustomField>