force-app/main/default/objects/PMNotificationSets__x/fields/EventCode__c.field-meta.xml
<CustomField>
    <fullName>EventCode__c</fullName>
    <description>EventCode</description>
    <externalDeveloperName>EventCode</externalDeveloperName>
    <label>EventCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>