force-app/main/default/objects/PMNotificationSets__x/fields/EventCodeGroup__c.field-meta.xml
<CustomField>
    <fullName>EventCodeGroup__c</fullName>
    <description>EventCodeGroup</description>
    <externalDeveloperName>EventCodeGroup</externalDeveloperName>
    <label>EventCodeGroup</label>
    <length>128</length>
    <type>Text</type>
</CustomField>