force-app/main/default/objects/PMNotificationSets__x/fields/FunctionalLocation__c.field-meta.xml
<CustomField>
    <fullName>FunctionalLocation__c</fullName>
    <description>FunctionalLocation</description>
    <externalDeveloperName>FunctionalLocation</externalDeveloperName>
    <label>FunctionalLocation</label>
    <length>128</length>
    <type>Text</type>
</CustomField>