force-app/main/default/objects/PMNotificationSets__x/fields/LongText__c.field-meta.xml
<CustomField>
    <fullName>LongText__c</fullName>
    <description>LongText</description>
    <externalDeveloperName>LongText</externalDeveloperName>
    <label>LongText</label>
    <length>128</length>
    <type>Text</type>
</CustomField>