force-app/main/default/objects/PMNotificationSets__x/fields/MaintenancePlanningPlant__c.field-meta.xml
<CustomField>
    <fullName>MaintenancePlanningPlant__c</fullName>
    <description>MaintenancePlanningPlant</description>
    <externalDeveloperName>MaintenancePlanningPlant</externalDeveloperName>
    <label>MaintenancePlanningPlant</label>
    <length>128</length>
    <type>Text</type>
</CustomField>