force-app/main/default/objects/PMNotificationSets__x/fields/MaintenancePlant__c.field-meta.xml
<CustomField>
    <fullName>MaintenancePlant__c</fullName>
    <description>MaintenancePlant</description>
    <externalDeveloperName>MaintenancePlant</externalDeveloperName>
    <label>MaintenancePlant</label>
    <length>128</length>
    <type>Text</type>
</CustomField>