force-app/main/default/objects/PMNotificationSets__x/fields/MainWorkCentre__c.field-meta.xml
<CustomField>
    <fullName>MainWorkCentre__c</fullName>
    <description>MainWorkCentre</description>
    <externalDeveloperName>MainWorkCentre</externalDeveloperName>
    <label>MainWorkCentre</label>
    <length>128</length>
    <type>Text</type>
</CustomField>