force-app/main/default/objects/PMNotificationSets__x/fields/MalfunctionEndDate__c.field-meta.xml
<CustomField>
    <fullName>MalfunctionEndDate__c</fullName>
    <description>MalfunctionEndDate</description>
    <externalDeveloperName>MalfunctionEndDate</externalDeveloperName>
    <label>MalfunctionEndDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>