force-app/main/default/objects/PMNotificationSets__x/fields/MalfunctionEndTime__c.field-meta.xml
<CustomField>
    <fullName>MalfunctionEndTime__c</fullName>
    <description>MalfunctionEndTime</description>
    <externalDeveloperName>MalfunctionEndTime</externalDeveloperName>
    <label>MalfunctionEndTime</label>
    <length>128</length>
    <type>Text</type>
</CustomField>