force-app/main/default/objects/PMNotificationSets__x/fields/MalfunctionStartDate__c.field-meta.xml
<CustomField>
    <fullName>MalfunctionStartDate__c</fullName>
    <description>MalfunctionStartDate</description>
    <externalDeveloperName>MalfunctionStartDate</externalDeveloperName>
    <label>MalfunctionStartDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>