force-app/main/default/objects/PMNotificationSets__x/fields/MalfunctionStartTime__c.field-meta.xml
<CustomField>
    <fullName>MalfunctionStartTime__c</fullName>
    <description>MalfunctionStartTime</description>
    <externalDeveloperName>MalfunctionStartTime</externalDeveloperName>
    <label>MalfunctionStartTime</label>
    <length>128</length>
    <type>Text</type>
</CustomField>