force-app/main/default/objects/PMNotificationSets__x/fields/MsgId__c.field-meta.xml
<CustomField>
    <fullName>MsgId__c</fullName>
    <description>MsgId</description>
    <externalDeveloperName>MsgId</externalDeveloperName>
    <label>MsgId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>