force-app/main/default/objects/PMNotificationSets__x/fields/NotificationDate__c.field-meta.xml
<CustomField>
    <fullName>NotificationDate__c</fullName>
    <description>NotificationDate</description>
    <externalDeveloperName>NotificationDate</externalDeveloperName>
    <label>NotificationDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>