force-app/main/default/objects/PMNotificationSets__x/fields/NotificationNumber__c.field-meta.xml
<CustomField>
    <fullName>NotificationNumber__c</fullName>
    <description>NotificationNumber</description>
    <externalDeveloperName>NotificationNumber</externalDeveloperName>
    <label>NotificationNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>