force-app/main/default/objects/PMNotificationSets__x/fields/NotificationTime__c.field-meta.xml
<CustomField>
    <fullName>NotificationTime__c</fullName>
    <description>NotificationTime</description>
    <externalDeveloperName>NotificationTime</externalDeveloperName>
    <label>NotificationTime</label>
    <length>128</length>
    <type>Text</type>
</CustomField>