force-app/main/default/objects/PMNotificationSets__x/fields/NotificationType__c.field-meta.xml
<CustomField>
    <fullName>NotificationType__c</fullName>
    <description>NotificationType</description>
    <externalDeveloperName>NotificationType</externalDeveloperName>
    <label>NotificationType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>