force-app/main/default/objects/PMNotificationSets__x/fields/OriginatingNotiification__c.field-meta.xml
<CustomField>
    <fullName>OriginatingNotiification__c</fullName>
    <description>OriginatingNotiification</description>
    <externalDeveloperName>OriginatingNotiification</externalDeveloperName>
    <label>OriginatingNotiification</label>
    <length>128</length>
    <type>Text</type>
</CustomField>