force-app/main/default/objects/PMNotificationSets__x/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>Partner</description>
    <externalDeveloperName>Partner</externalDeveloperName>
    <label>Partner</label>
    <length>128</length>
    <type>Text</type>
</CustomField>