force-app/main/default/objects/PMNotificationSets__x/fields/personResponsibleAddrNo__c.field-meta.xml
<CustomField>
    <fullName>personResponsibleAddrNo__c</fullName>
    <description>personResponsibleAddrNo</description>
    <externalDeveloperName>personResponsibleAddrNo</externalDeveloperName>
    <label>personResponsibleAddrNo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>