force-app/main/default/objects/PMNotificationSets__x/fields/personResponsibleChangedBy__c.field-meta.xml
<CustomField>
    <fullName>personResponsibleChangedBy__c</fullName>
    <description>personResponsibleChangedBy</description>
    <externalDeveloperName>personResponsibleChangedBy</externalDeveloperName>
    <label>personResponsibleChangedBy</label>
    <length>128</length>
    <type>Text</type>
</CustomField>