force-app/main/default/objects/PMNotificationSets__x/fields/personResponsibleChAt__c.field-meta.xml
<CustomField>
    <fullName>personResponsibleChAt__c</fullName>
    <description>personResponsibleChAt</description>
    <externalDeveloperName>personResponsibleChAt</externalDeveloperName>
    <label>personResponsibleChAt</label>
    <length>128</length>
    <type>Text</type>
</CustomField>