force-app/main/default/objects/PMNotificationSets__x/fields/personResponsibleChOn__c.field-meta.xml
<CustomField>
    <fullName>personResponsibleChOn__c</fullName>
    <description>personResponsibleChOn</description>
    <externalDeveloperName>personResponsibleChOn</externalDeveloperName>
    <label>personResponsibleChOn</label>
    <type>DateTime</type>
</CustomField>