force-app/main/default/objects/PMNotificationSets__x/fields/personResponsibleCounter__c.field-meta.xml
<CustomField>
    <fullName>personResponsibleCounter__c</fullName>
    <description>personResponsibleCounter</description>
    <externalDeveloperName>personResponsibleCounter</externalDeveloperName>
    <label>personResponsibleCounter</label>
    <length>128</length>
    <type>Text</type>
</CustomField>