force-app/main/default/objects/PMNotificationSets__x/fields/personResponsibleCreatDate__c.field-meta.xml
<CustomField>
    <fullName>personResponsibleCreatDate__c</fullName>
    <description>personResponsibleCreatDate</description>
    <externalDeveloperName>personResponsibleCreatDate</externalDeveloperName>
    <label>personResponsibleCreatDate</label>
    <type>DateTime</type>
</CustomField>