force-app/main/default/objects/PMNotificationSets__x/fields/personResponsibleCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>personResponsibleCreatedBy__c</fullName>
    <description>personResponsibleCreatedBy</description>
    <externalDeveloperName>personResponsibleCreatedBy</externalDeveloperName>
    <label>personResponsibleCreatedBy</label>
    <length>128</length>
    <type>Text</type>
</CustomField>