force-app/main/default/objects/PMNotificationSets__x/fields/personResponsibleDeleteFlag__c.field-meta.xml
<CustomField>
    <fullName>personResponsibleDeleteFlag__c</fullName>
    <description>personResponsibleDeleteFlag</description>
    <externalDeveloperName>personResponsibleDeleteFlag</externalDeveloperName>
    <label>personResponsibleDeleteFlag</label>
    <length>128</length>
    <type>Text</type>
</CustomField>