force-app/main/default/objects/PMNotificationSets__x/fields/personResponsibleNotificationNumber__c.field-meta.xml
<CustomField>
    <fullName>personResponsibleNotificationNumber__c</fullName>
    <description>personResponsibleNotificationNumber</description>
    <externalDeveloperName>personResponsibleNotificationNumber</externalDeveloperName>
    <label>personResponsibleNotificationNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>