force-app/main/default/objects/PMNotificationSets__x/fields/personResponsibleObjectNo__c.field-meta.xml
<CustomField>
    <fullName>personResponsibleObjectNo__c</fullName>
    <description>personResponsibleObjectNo</description>
    <externalDeveloperName>personResponsibleObjectNo</externalDeveloperName>
    <label>personResponsibleObjectNo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>