force-app/main/default/objects/PMNotificationSets__x/fields/personResponsibleObjectType__c.field-meta.xml
<CustomField>
    <fullName>personResponsibleObjectType__c</fullName>
    <description>personResponsibleObjectType</description>
    <externalDeveloperName>personResponsibleObjectType</externalDeveloperName>
    <label>personResponsibleObjectType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>