force-app/main/default/objects/PMNotificationSets__x/fields/personResponsibleOrigin__c.field-meta.xml
<CustomField>
    <fullName>personResponsibleOrigin__c</fullName>
    <description>personResponsibleOrigin</description>
    <externalDeveloperName>personResponsibleOrigin</externalDeveloperName>
    <label>personResponsibleOrigin</label>
    <length>128</length>
    <type>Text</type>
</CustomField>