force-app/main/default/objects/PMNotificationSets__x/fields/personResponsiblePartner__c.field-meta.xml
<CustomField>
    <fullName>personResponsiblePartner__c</fullName>
    <description>personResponsiblePartner</description>
    <externalDeveloperName>personResponsiblePartner</externalDeveloperName>
    <label>personResponsiblePartner</label>
    <length>128</length>
    <type>Text</type>
</CustomField>