force-app/main/default/objects/PMNotificationSets__x/fields/personResponsiblePartnRole__c.field-meta.xml
<CustomField>
    <fullName>personResponsiblePartnRole__c</fullName>
    <description>personResponsiblePartnRole</description>
    <externalDeveloperName>personResponsiblePartnRole</externalDeveloperName>
    <label>personResponsiblePartnRole</label>
    <length>128</length>
    <type>Text</type>
</CustomField>