force-app/main/default/objects/PMNotificationSets__x/fields/personResponsibleParttimezo__c.field-meta.xml
<CustomField>
    <fullName>personResponsibleParttimezo__c</fullName>
    <description>personResponsibleParttimezo</description>
    <externalDeveloperName>personResponsibleParttimezo</externalDeveloperName>
    <label>personResponsibleParttimezo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>