force-app/main/default/objects/PMNotificationSets__x/fields/personResponsiblePosTime__c.field-meta.xml
<CustomField>
    <fullName>personResponsiblePosTime__c</fullName>
    <description>personResponsiblePosTime</description>
    <externalDeveloperName>personResponsiblePosTime</externalDeveloperName>
    <label>personResponsiblePosTime</label>
    <length>128</length>
    <type>Text</type>
</CustomField>