force-app/main/default/objects/PMNotificationSets__x/fields/ReportedBy__c.field-meta.xml
<CustomField>
    <fullName>ReportedBy__c</fullName>
    <description>ReportedBy</description>
    <externalDeveloperName>ReportedBy</externalDeveloperName>
    <label>ReportedBy</label>
    <length>128</length>
    <type>Text</type>
</CustomField>