force-app/main/default/objects/PMNotificationSets__x/fields/RequiredEndDate__c.field-meta.xml
<CustomField>
    <fullName>RequiredEndDate__c</fullName>
    <description>RequiredEndDate</description>
    <externalDeveloperName>RequiredEndDate</externalDeveloperName>
    <label>RequiredEndDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>