force-app/main/default/objects/PMNotificationSets__x/fields/RequiredEndTime__c.field-meta.xml
<CustomField>
    <fullName>RequiredEndTime__c</fullName>
    <description>RequiredEndTime</description>
    <externalDeveloperName>RequiredEndTime</externalDeveloperName>
    <label>RequiredEndTime</label>
    <length>128</length>
    <type>Text</type>
</CustomField>