force-app/main/default/objects/PMNotificationSets__x/fields/RequiredStartDate__c.field-meta.xml
<CustomField>
    <fullName>RequiredStartDate__c</fullName>
    <description>RequiredStartDate</description>
    <externalDeveloperName>RequiredStartDate</externalDeveloperName>
    <label>RequiredStartDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>