force-app/main/default/objects/PMNotificationSets__x/fields/RequiredStartTime__c.field-meta.xml
<CustomField>
    <fullName>RequiredStartTime__c</fullName>
    <description>RequiredStartTime</description>
    <externalDeveloperName>RequiredStartTime</externalDeveloperName>
    <label>RequiredStartTime</label>
    <length>128</length>
    <type>Text</type>
</CustomField>