force-app/main/default/objects/PMNotificationSets__x/fields/ShortText__c.field-meta.xml
<CustomField>
    <fullName>ShortText__c</fullName>
    <description>ShortText</description>
    <externalDeveloperName>ShortText</externalDeveloperName>
    <label>ShortText</label>
    <length>128</length>
    <type>Text</type>
</CustomField>