force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartObjectType__c.field-meta.xml
<CustomField>
    <fullName>soldToPartObjectType__c</fullName>
    <description>soldToPartObjectType</description>
    <externalDeveloperName>soldToPartObjectType</externalDeveloperName>
    <label>soldToPartObjectType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>