force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyAddrNo__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyAddrNo__c</fullName>
    <description>soldToPartyAddrNo</description>
    <externalDeveloperName>soldToPartyAddrNo</externalDeveloperName>
    <label>soldToPartyAddrNo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>