force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyChangedBy__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyChangedBy__c</fullName>
    <description>soldToPartyChangedBy</description>
    <externalDeveloperName>soldToPartyChangedBy</externalDeveloperName>
    <label>soldToPartyChangedBy</label>
    <length>128</length>
    <type>Text</type>
</CustomField>