force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyChAt__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyChAt__c</fullName>
    <description>soldToPartyChAt</description>
    <externalDeveloperName>soldToPartyChAt</externalDeveloperName>
    <label>soldToPartyChAt</label>
    <length>128</length>
    <type>Text</type>
</CustomField>