force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyChOn__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyChOn__c</fullName>
    <description>soldToPartyChOn</description>
    <externalDeveloperName>soldToPartyChOn</externalDeveloperName>
    <label>soldToPartyChOn</label>
    <type>DateTime</type>
</CustomField>