force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyCounter__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyCounter__c</fullName>
    <description>soldToPartyCounter</description>
    <externalDeveloperName>soldToPartyCounter</externalDeveloperName>
    <label>soldToPartyCounter</label>
    <length>128</length>
    <type>Text</type>
</CustomField>