force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyCreatDate__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyCreatDate__c</fullName>
    <description>soldToPartyCreatDate</description>
    <externalDeveloperName>soldToPartyCreatDate</externalDeveloperName>
    <label>soldToPartyCreatDate</label>
    <type>DateTime</type>
</CustomField>