force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyCreatedBy__c</fullName>
    <description>soldToPartyCreatedBy</description>
    <externalDeveloperName>soldToPartyCreatedBy</externalDeveloperName>
    <label>soldToPartyCreatedBy</label>
    <length>128</length>
    <type>Text</type>
</CustomField>