force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyDeleteFlag__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyDeleteFlag__c</fullName>
    <description>soldToPartyDeleteFlag</description>
    <externalDeveloperName>soldToPartyDeleteFlag</externalDeveloperName>
    <label>soldToPartyDeleteFlag</label>
    <length>128</length>
    <type>Text</type>
</CustomField>