force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyNotificationNumber__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyNotificationNumber__c</fullName>
    <description>soldToPartyNotificationNumber</description>
    <externalDeveloperName>soldToPartyNotificationNumber</externalDeveloperName>
    <label>soldToPartyNotificationNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>