force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyObjectNo__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyObjectNo__c</fullName>
    <description>soldToPartyObjectNo</description>
    <externalDeveloperName>soldToPartyObjectNo</externalDeveloperName>
    <label>soldToPartyObjectNo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>