force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyOrigin__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyOrigin__c</fullName>
    <description>soldToPartyOrigin</description>
    <externalDeveloperName>soldToPartyOrigin</externalDeveloperName>
    <label>soldToPartyOrigin</label>
    <length>128</length>
    <type>Text</type>
</CustomField>