force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyPartner__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyPartner__c</fullName>
    <description>soldToPartyPartner</description>
    <externalDeveloperName>soldToPartyPartner</externalDeveloperName>
    <label>soldToPartyPartner</label>
    <length>128</length>
    <type>Text</type>
</CustomField>