force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyPartnRole__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyPartnRole__c</fullName>
    <description>soldToPartyPartnRole</description>
    <externalDeveloperName>soldToPartyPartnRole</externalDeveloperName>
    <label>soldToPartyPartnRole</label>
    <length>128</length>
    <type>Text</type>
</CustomField>