force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyParttimezo__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyParttimezo__c</fullName>
    <description>soldToPartyParttimezo</description>
    <externalDeveloperName>soldToPartyParttimezo</externalDeveloperName>
    <label>soldToPartyParttimezo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>