force-app/main/default/objects/PMNotificationSets__x/fields/soldToPartyPosTime__c.field-meta.xml
<CustomField>
    <fullName>soldToPartyPosTime__c</fullName>
    <description>soldToPartyPosTime</description>
    <externalDeveloperName>soldToPartyPosTime</externalDeveloperName>
    <label>soldToPartyPosTime</label>
    <length>128</length>
    <type>Text</type>
</CustomField>