force-app/main/default/objects/PMNotificationSets__x/fields/SystemStatus__c.field-meta.xml
<CustomField>
    <fullName>SystemStatus__c</fullName>
    <description>SystemStatus</description>
    <externalDeveloperName>SystemStatus</externalDeveloperName>
    <label>SystemStatus</label>
    <length>128</length>
    <type>Text</type>
</CustomField>