force-app/main/default/objects/PMNotificationSets__x/fields/TargetSystem__c.field-meta.xml
<CustomField>
    <fullName>TargetSystem__c</fullName>
    <description>TargetSystem</description>
    <externalDeveloperName>TargetSystem</externalDeveloperName>
    <label>TargetSystem</label>
    <length>128</length>
    <type>Text</type>
</CustomField>