force-app/main/default/objects/PMNotificationSets__x/fields/TechInspectionOn__c.field-meta.xml
<CustomField>
    <fullName>TechInspectionOn__c</fullName>
    <description>TechInspectionOn</description>
    <externalDeveloperName>TechInspectionOn</externalDeveloperName>
    <label>TechInspectionOn</label>
    <length>128</length>
    <type>Text</type>
</CustomField>