force-app/main/default/objects/PMNotificationSets__x/fields/TechInspectionPersonName__c.field-meta.xml
<CustomField>
    <fullName>TechInspectionPersonName__c</fullName>
    <description>TechInspectionPersonName</description>
    <externalDeveloperName>TechInspectionPersonName</externalDeveloperName>
    <label>TechInspectionPersonName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>