force-app/main/default/objects/PMNotificationSets__x/fields/WorkorderNumber__c.field-meta.xml
<CustomField>
    <fullName>WorkorderNumber__c</fullName>
    <description>WorkorderNumber</description>
    <externalDeveloperName>WorkorderNumber</externalDeveloperName>
    <label>WorkorderNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>